ajust nas configs

--- a/Silverback/appsettings.Development.json
+++ b/Silverback/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "KafkaConfig": {
+    "BootstrapServers": "localhost:9092",
+    "ConsumerGroup": "local",
+    "Topic": "event-created"
   }
 }
