--- a/Silverback/appsettings.json
+++ b/Silverback/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "KafkaConfig": {
+    "BootstrapServers": "kafka:9092",
+    "ConsumerGroupId": "docker",
+    "Topic": "event-created"
   }
 }
