ajuste no ConsumerGroupId

--- a/Silverback/appsettings.Development.json
+++ b/Silverback/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "KafkaConfig": {
     "BootstrapServers": "localhost:9092",
-    "ConsumerGroup": "local",
+    "ConsumerGroupId": "local",
     "Topic": "event-created"
   }
 }
