--- a/Silverback/Silverback.csproj
+++ b/Silverback/Silverback.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.9" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
 	<PackageReference Include="Silverback.Integration.Kafka" Version="4.6.2" />
   </ItemGroup>
